# aeonic

./: .env.example  .gitignore  CNAME  Cargo.toml  README.md  index.html
aeonic-gateway/src/: error.rs  state.rs
aeonic-gateway/src/middleware/: mod.rs
aeonic-gateway/src/routes/: mod.rs  models.rs
aeonic-policy/src/: rules.rs
aeonic-router/: Cargo.toml
aeonic-router/src/: lib.rs  registry.rs  router.rs
aeonic-state/: Cargo.toml
aeonic-telemetry/src/: lib.rs  metrics.rs  recorder.rs
crates/aeonic-agents/: Cargo.toml
crates/aeonic-agents/src/: agent.rs  critic.rs  lib.rs  orchestrator.rs  pipeline.rs  tool.rs  worker.rs
crates/aeonic-core/: Cargo.toml
crates/aeonic-core/src/: config.rs  error.rs  lib.rs  traits.rs  types.rs
crates/aeonic-gateway/: Cargo.toml
crates/aeonic-gateway/aeonic-gateway/: Cargo.toml
crates/aeonic-gateway/aeonic-gateway/src/: main.rs
crates/aeonic-gateway/aeonic-gateway/src/routes/: chat.rs  health.rs
crates/aeonic-gateway/src/: main.rs  state.rs
crates/aeonic-gateway/src/routes/: chat.rs  dashboard.html  dashboard.rs  health.rs  mod.rs
crates/aeonic-policy/: Cargo.toml
crates/aeonic-policy/aeonic-policy/src/: engine.rs  lib.rs  rate_limiter.rs
crates/aeonic-providers/: Cargo.toml
crates/aeonic-providers/src/: anthropic.rs  lib.rs  ollama.rs  openai.rs
crates/aeonic-router/: Cargo.toml
crates/aeonic-router/aeonic-router/src/: scorer.rs  selector.rs
crates/aeonic-router/src/: fallback.rs  scorer.rs
crates/aeonic-state/: Cargo.toml
crates/aeonic-state/aeonic-state/src/: lib.rs  memory.rs  session.rs
crates/aeonic-state/src/: vector.rs
crates/aeonic-telemetry/: Cargo.toml
crates/aeonic-telemetry/aeonic-telemetry/: Cargo.toml
crates/aeonic-telemetry/src/: init.rs
