[package]
name        = "aeonic-router"
description = "Intelligent routing engine for Aeonic"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
aeonic-core      = { path = "../aeonic-core" }
aeonic-providers = { path = "../aeonic-providers" }
tokio            = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
async-trait      = { workspace = true }
futures          = { workspace = true }
tracing          = { workspace = true }
dashmap          = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall    = { workspace = true }
