[package]
name        = "aeonic-agents"
description = "Multi-agent orchestration primitives for Aeonic"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
aeonic-core    = { path = "../aeonic-core",    version = "0.1.0" }
aeonic-router  = { path = "../aeonic-router",  version = "0.1.0" }
aeonic-state   = { path = "../aeonic-state",   version = "0.1.0" }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
anyhow         = { workspace = true }
async-trait    = { workspace = true }
futures        = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }
chrono         = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
