[package]
name        = "aeonic-gateway"
description = "HTTP gateway server for Aeonic — OpenAI-compatible API"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "aeonic-gateway"
path = "src/main.rs"

[dependencies]
aeonic-core      = { path = "../aeonic-core", version = "0.1.0" }
aeonic-router    = { path = "../aeonic-router", version = "0.1.0" }
aeonic-providers = { path = "../aeonic-providers", version = "0.1.0" }
aeonic-telemetry = { path = "../aeonic-telemetry", version = "0.1.0" }
tokio            = { workspace = true }
axum             = { workspace = true }
tower            = { workspace = true }
tower-http       = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
futures          = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
bytes            = { workspace = true }
dotenvy          = { workspace = true }
tokio-stream     = { workspace = true }
