[package]
name        = "aeonic-policy"
description = "Policy engine for Aeonic — routing rules, cost ceilings, rate limits"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
aeonic-core  = { path = "../aeonic-core" }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
async-trait  = { workspace = true }
tracing      = { workspace = true }
dashmap      = { workspace = true }
chrono       = { workspace = true }

[dev-dependencies]
tokio-test   = { workspace = true }
