[package]
name        = "aeonic-state"
description = "Distributed state, memory and vector store for Aeonic agents"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
aeonic-core  = { path = "../aeonic-core", version = "0.1.0" }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
async-trait  = { workspace = true }
tracing      = { workspace = true }
dashmap      = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }

[dev-dependencies]
tokio-test   = { workspace = true }
