[package]
name        = "aeonic-telemetry"
description = "Observability layer for Aeonic — tracing, cost accounting, metrics"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
aeonic-core        = { path = "../aeonic-core", version = "0.1.0" }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
chrono             = { workspace = true }
dashmap            = { workspace = true }
uuid               = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
